small fix in alignSelf

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -98,6 +98,10 @@ h1 {
   border: 2px solid rgba(255, 255, 255, 0.2);
 }
 
+.fact p {
+  align-self: flex-start;
+}
+
 @media (max-width: 1200px) {
   .fact {
     flex-direction: column;
